bottom section tablet

--- a/index.html
+++ b/index.html
@@ -164,13 +164,18 @@
             </section>
 
             <section class="bottom-section-desktop-tablet">
+                <div class="back-light">
+                    <img src="./resources/assets/pattern-blur.svg" alt="Back light">
+                </div>
+
                 <div class="image-jeremy">
+                    
                     <img src="./resources/assets/image-jeremy-large@2x.webp" alt="Jeremy">
                 </div>
 
-                <!-- <div class="image-jeremy-tablet">
+                <div class="image-jeremy-tablet">
                     <img src="./resources/assets/image-jeremy-large.png" alt="Jeremy">
-                </div> -->
+                </div>
 
                 <div class="curved-image">
                     <img src="./resources/assets/pattern-curved-line-2.svg" alt="Curved line">
@@ -186,13 +191,13 @@
                     </p>
                     <div>
                         <h3>
-                        JEREMY ROBINSON
-                    </h3>
-                    <h4>
-                        CMO, FYLO
-                    </h4>
+                            JEREMY ROBINSON
+                        </h3>
+                        <h4>
+                            CMO, FYLO
+                        </h4>
                     </div>
-                    
+
 
                 </div>
             </section>
