bottom section mobile

--- a/index.html
+++ b/index.html
@@ -177,6 +177,10 @@
                     <img src="./resources/assets/image-jeremy-large.png" alt="Jeremy">
                 </div>
 
+                <div class="image-jeremy-mobile">
+                    <img src="./resources/assets/image-jeremy-small.webp" alt="Jeremy">
+                </div>
+
                 <div class="curved-image">
                     <img src="./resources/assets/pattern-curved-line-2.svg" alt="Curved line">
 
