--- a/index.html
+++ b/index.html
@@ -207,7 +207,39 @@
             </section>
 
         </main>
+        <footer>
+            <div class="footer-items">
 
+                <div class="footer-logo">
+                   <span>
+                    suite
+                   </span>
+                    <!-- <img src="./resources/assets/logo.svg" alt="Footer Logo"> -->
+                </div>
+
+                <div class="copyright-info">
+                    <span>
+                        Copyright - Suite
+                    </span>
+                </div>
+
+                <div class="footer-socials">
+                    <ul>
+                        <li>
+                            <a href="justnews.com"><img src="./resources/assets/icon-facebook.svg" alt="Facebook-icon"></a>
+                        </li>
+                        <li>
+                            <a href="justnews.com"><img src="./resources/assets/icon-twitter.svg" alt="Twitter-icon"></a>
+                        </li>
+                        <li>
+                            <a href="justnews.com"><img src="./resources/assets/icon-instagram.svg" alt="Instagram-icon"></a>
+                        </li>
+                    </ul>
+                  
+                </div>
+
+            </div>
+        </footer>
     </body>
 
 </html>
