--- a/index.html
+++ b/index.html
@@ -226,13 +226,13 @@
                 <div class="footer-socials">
                     <ul>
                         <li>
-                            <a href="justnews.com"><img src="./resources/assets/icon-facebook.svg" alt="Facebook-icon"></a>
+                            <a href="#"><img src="./resources/assets/icon-facebook.svg" alt="Facebook-icon"></a>
                         </li>
                         <li>
-                            <a href="justnews.com"><img src="./resources/assets/icon-twitter.svg" alt="Twitter-icon"></a>
+                            <a href="#"><img src="./resources/assets/icon-twitter.svg" alt="Twitter-icon"></a>
                         </li>
                         <li>
-                            <a href="justnews.com"><img src="./resources/assets/icon-instagram.svg" alt="Instagram-icon"></a>
+                            <a href="#"><img src="./resources/assets/icon-instagram.svg" alt="Instagram-icon"></a>
                         </li>
                     </ul>
                   
