added desktop active

--- a/index.html
+++ b/index.html
@@ -28,8 +28,10 @@
 
             </div>
 
+           
+
             <div class="nav-button">
-                <button>Request Beta Access</button>
+                <button class="header-button">Request Beta Access</button>
             </div>
         </header>
 
@@ -49,7 +51,7 @@
                             Our marketing and sales automations help you scale your outreach to get more leads for your company
                         </p>
 
-                        <button>
+                        <button class="top-button-active">
                             Request Beta Access
                         </button>
 
